[metadata]
name = lektor-atom
author = A. Jesse Jiryu Davis
author_email = jesse@emptysquare.net
description = Lektor plugin that generates Atom feeds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lektor/lektor-atom
keywords = Lektor, plugin, static-site, blog, atom, rss
license = MIT
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
install_requires=
    MarkupSafe
    feedgenerator
py_modules = lektor_atom
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6

[options.entry_points]
lektor.plugins =
    atom = lektor_atom:AtomPlugin
